Upgrade bug mining to work with v4 (java 17)